--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,22 @@ canvas {
   background-color: #93c48b;
   height: 140px;
 }
+#turnPlayerOne, #turnPlayerTwo {
+  font-size: 24px;
+  font-style: bold;
+}
+.redMessage {
+  color: red;
+}
+.blueMessage {
+  color: blue;
+}
+.victoryMessage {
+  font-size: 30px;
+  color: green;
+  font-style: italic;
+  margin-top: 40px;
+}
 /* Styles pour les Smartphone*/
 
 @media (max-width: 767px) {
